<resources>
    <string name="app_name">Books</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shelf">Shelf</string>
    <string name="explore">Explore</string>
    <string name="create">Create</string>
    <string name="profile">Profile</string>
    <string name="create_your_own_stories">Create your own stories</string>
    <string name="readers_are_leaders">"Readers are leaders"</string>
    <string name="join_now">Join now</string>
    <string name="my_book_reviews">My Book Reviews</string>
    <string name="reading_history">Reading History</string>
    <string name="share_my_books_on_whatsapp">Share My Books on Whatsapp</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_in">SIGN IN</string>
    <string name="search">Search…</string>
    <string name="hot_genres">Hot Genres</string>
    <string name="romance">Romance</string>
    <string name="fantasy">Fantasy</string>
    <string name="mystery">Mystery</string>
    <string name="thriller">Thriller</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="adventure">Adventure</string>
    <string name="best_sellers">Best-sellers</string>
    <string name="try_something_new">Try Something New</string>
    <string name="title1">The Seven Husbands of Evelyn Hugo</string>
    <string name="title2">The Hunger Games</string>
    <string name="title3">It Ends With Us</string>
    <string name="title4">The Love Hypothesis</string>
    <string name="title5">The Spanish Love Deception</string>
    <string name="title6">The Unhoneymooners</string>
    <string name="title7">The Hating Game</string>
    <string name="title8">Ugly Love</string>
    <string name="title9">Heartless</string>
    <string name="title10">Shatter Me</string>
    <string name="title11">The Inheritance Games</string>
    <string name="title12">Daughter of the Siren Queen</string>
    <string name="title13">The Midnight Library</string>
    <string name="title14">As Good As Dead</string>
    <string name="title15">The Cruel Prince</string>
    <string name="title16">A Court of Thorns and Roses</string>
    <string name="title17">All The Bright Places</string>
    <string name="title18">Excuse Me While I Ugly Cry</string>
    <string name="title19">They Both Die At The End</string>
    <string name="title20">Then She Was Gone</string>
    <string name="author1">by Taylor Jenkins Reid</string>
    <string name="author2">by Suzanne Collins</string>
    <string name="author3">by Colleen Hoover</string>
    <string name="author4">by Ali Hazelwood</string>
    <string name="author5">by Elena Armas</string>
    <string name="author6">by Christina Lauren</string>
    <string name="author7">by Sally Thorne</string>
    <string name="author8">by Colleen Hoover</string>
    <string name="author9">by Marissa Meyer</string>
    <string name="author10">by Tahereh Mafi</string>
    <string name="author11">by Jennifer Lynn Barnes</string>
    <string name="author12">by Tricia Levenseller</string>
    <string name="author13">by Matt Haig</string>
    <string name="author14">by Holly Jackson</string>
    <string name="author15">by Holly Black</string>
    <string name="author16">by Sarah J. Maas</string>
    <string name="author17">by Jennifer Niven</string>
    <string name="author18">by Joya Goffney</string>
    <string name="author19">by Adam Silvera</string>
    <string name="author20">by Lisa Jewell</string>
    <string name="detail1">Aging and reclusive Hollywood movie icon Evelyn Hugo is finally ready to tell the truth about her glamorous and scandalous life. But when she chooses unknown magazine reporter Monique Grant for the job, no one is more astounded than Monique herself. Why her? Why now? Monique is not exactly on top of the world. Her husband has left her, and her professional life is going nowhere. Monique is determined to use this opportunity to jumpstart her career.  Summoned to Evelyn’s luxurious apartment, Monique listens in fascination as the actress tells her story. From making her way to Los Angeles in the 1950s to her decision to leave show business in the ‘80s, and, of course, the seven husbands along the way, Evelyn unspools a tale of ruthless ambition, unexpected friendship, and a great forbidden love. Monique begins to feel a very real connection to the legendary star, but as Evelyn’s story near its conclusion, it becomes clear that her life intersects with Monique’s own in tragic and irreversible ways.</string>
    <string name="detail2">In the ruins of a place once known as North America lies the nation of Panem, a shining Capitol surrounded by twelve outlying districts. The Capitol is harsh and cruel and keeps the districts in line by forcing them all to send one boy and one girl between the ages of twelve and eighteen to participate in the annual Hunger Games, a fight to the death on live TV.</string>
    <string name="detail3">Sometimes it is the one who loves you who hurts you the most. Lily hasn’t always had it easy, but that’s never stopped her from working hard for the life she wants.When she feels a spark with a gorgeous neurosurgeon named Ryle Kincaid, everything in Lily’s life suddenly seems almost too good to be true. – Ryle is assertive, stubborn, maybe even a little arrogant. He also has a total soft spot for Lily. And the way he looks in scrubs certainly doesn’t hurt. Lily can’t get him out of her head. But Ryle’s complete aversion to relationships is disturbing. Even as Lily finds herself becoming the exception to his “no dating” rule, she can’t help but wonder what made him that way in the first place – As questions about her new relationship overwhelm her, so do thoughts of Atlas Corrigan — her first love and a link to the past she left behind. He was her kindred spirit, her protector. When Atlas suddenly reappears, everything Lily has built with Ryle is threatened.</string>
    <string name="detail4">As a 3 year PhD candidate, Olive Smith doesnt believe in lasting romantic relationships, but her best friend does, and thats what got her into this situation. But scientists require proof. So, like any self respecting biologist, Olive panics and kisses the first man she sees. That man is none other than Adam Carlsen, a young hotshot professor, and well known ass. Which is why Olive is positively floored when Stanfords reigning lab tyrant agrees to keep her charade a secret and be her fake boyfriend. But when a big science conference goes haywire, putting Olives career on the Bunsen burner, Adam surprises her again with his unyielding support and even more unyielding… six pack abs.  Suddenly their little experiment feels dangerously close to combustion. And Olive discovers that the only thing more complicated than a hypothesis on love is putting her own heart under the microscope.</string>
    <string name="detail5">Catalina Martín desperately needs a date to her sister’s wedding. Especially since her little white lie about her American boyfriend has spiralled out of control. Now everyone she knows—including her ex and his fiancée—will be there and eager to meet him.</string>
    <string name="detail6">Olive is always unlucky: in her career, in love, in…well, everything. Her identical twin sister Ami, on the other hand, is probably the luckiest person in the world. Her meet-cute with her fiancé is something out of a romantic comedy and she’s managed to finance her entire wedding by winning a series of Internet contests. Worst of all, she’s forcing Olive to spend the day with her sworn enemy, Ethan, who just happens to be the best man. – Olive braces herself to get through 24 hours of wedding hell before she can return to her comfortable, unlucky life. But when the entire wedding party gets food poisoning from eating bad shellfish, the only people who aren’t affected are Olive and Ethan. And now there’s an all-expenses-paid honeymoon in Hawaii up for grabs. When Olive runs into her future boss, the little white lie she tells him is suddenly at risk to become a whole lot bigger. She and Ethan now have to pretend to be loving newlyweds, and her luck seems worse than ever. But the weird thing is that she doesn’t mind playing pretend. In fact, she feels kind of… lucky.</string>
    <string name="detail7">Lucy Hutton and Joshua Templeman hate each other. Not dislike. Not begrudgingly tolerate. Hate. And they have no problem displaying their feelings through a series of ritualistic passive aggressive maneuvers as they sit across from each other, executive assistants to co-CEOs of a publishing company. Lucy can’t understand Joshua’s joyless, uptight, meticulous approach to his job. Joshua is clearly baffled by Lucy’s overly bright clothes, quirkiness, and Pollyanna attitude.</string>
    <string name="detail8">When Tate Collins meets airline pilot Miles Archer, she knows it isn’t love at first sight. They wouldn’t even go so far as to consider themselves friends. The only thing Tate and Miles have in common is an undeniable attraction. Once their desires are out in the open, they realise they have the perfect set-up. He doesn’t want love, she doesn’t have time for love.  Their arrangement could be surprisingly seamless, as long as Tate can stick to the only two rules Miles has for her: Never ask about the past. Don’t expect a future. They think they can handle it, but realise they can’t handle it at all. Hearts get infiltrated. Promises get broken. Rules get shattered. Love gets ugly.</string>
    <string name="detail9">Catherine may be one of the most desired girls in Wonderland, and a favourite of the unmarried King of Hearts, but her interests lie elsewhere. A talented baker, all she wants is to open a shop with her best friend. But according to her mother, such a goal is unthinkable for the young woman who could be the next queen. Then Cath meets Jest, the handsome and mysterious court joker. For the first time, she feels the pull of true attraction. At the risk of offending the king and infuriating her parents, she and Jest enter into an intense, secret courtship. Cath is determined to define her own destiny and fall in love on her terms. But in a land thriving with magic, madness, and monsters, fate has other plans.</string>
    <string name="back">Back</string>
    <string name="classics">Classics</string>
    <string name="horror">Horror</string>
    <string name="historical_fiction">Historical Fiction</string>
    <string name="women_s_fiction">Women\'s Fiction</string>
    <string name="biographies_autobiographies"><![CDATA[Biographies & Autobiographies]]></string>
    <string name="poetry">Poetry</string>
    <string name="self_help">Self-Help</string>
    <string name="true_crime">True Crime</string>
    <string name="dystopian">Dystopian</string>
    <string name="comedy">Comedy</string>
    <string name="log_in">Log in</string>
    <string name="email_address">Email Address:</string>
    <string name="password">Password:</string>
    <string name="sign_up_now">Sign up Now</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="Sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name:</string>
    <string name="become_a_reader_today">Become a reader today</string>
</resources>